# htcondor_monitor

./: CLAUDE.md  README.md  SConstruct  pyproject.toml
bin.src/: htcondor-monitor
cron/: daily_anomaly.py  daily_health.py  monthly_trends.py  weekly_efficiency.py  weekly_gpu.py  weekly_nodes.py
examples/: .env.example
htcondor_monitor/: __init__.py  builder.py  metrics.py  monitoring_agent.py  opensearch_queries.py  opensearch_tools.py  orchestrators.py  report.py  run.py  settings.py  store.py
htcondor_monitor/tools/: metrics.py  opensearch_queries.py  opensearch_tools.py
tests/: conftest.py  test_cli.py  test_json_extraction.py  test_metrics.py  test_orchestrators.py  test_prompt_builder.py  test_report.py  test_run_record.py  test_settings.py  test_state_store.py
